@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(.DollarNames,AbstractTopDownSet)
+S3method(all,equal.AbstractTopDownSet)
 export(FragmentViews)
 export(createTngFusionMethFiles)
 export(defaultMs1Settings)
